<resources>
    <string name="app_name">Secret Notes</string>
    <string name="hello">Hello There!</string>
    <string name="getting_started">Let\'s get started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup_here">Sign up here</string>
    <string name="login_here">Login here</string>
    <string name="add_note">Add new note</string>
    <string name="Title">Title</string>
    <string name="Note_Title">Note Title</string>
    <string name="Content">Content</string>
    <string name="Note_Content">Note Content</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="set_lock">Create your account PIN for security</string>
    <string name="pin">Type in Your PIN Code</string>
    <string name="confirm_pin">Confirm Your PIN Code</string>
    <string name="Confirm">Confirm</string>
    <string name="unlock">Enter your PIN</string>
    <string name="forgot_pin">Forgot your PIN?</string>
    <string name="reset_pin">Reset your PIN</string>
    <string name="reset">Reset</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>