<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".CreateAccountActivity">
    
    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/signup"
        android:id="@+id/signup_icon"
        android:layout_marginVertical="32dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_icon"
        android:id="@+id/hello_Text"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form"
        android:layout_below="@id/hello_Text"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/create_account_button"
            android:layout_height="64dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            />

        <ProgressBar
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_here"
            android:id="@+id/login_here" />

    </LinearLayout>

</RelativeLayout>