<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    tools:context=".setting_lock">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lock"
        android:id="@+id/lock_icon"
        android:layout_marginVertical="32dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock_icon"
            android:id="@+id/lock_text_view"
            android:text="@string/set_lock"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form"
        android:layout_below="@id/lock_text_view"
        android:orientation="vertical"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:textSize="20sp"
        android:id="@+id/pin"
        android:inputType="numberPassword"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_margin="12dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/show"
            android:id="@+id/show_password"
            android:layout_marginEnd="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="-60dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/show" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/hide"
            android:id="@+id/hide_password"
            android:layout_marginEnd="24dp"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="-60dp"
            android:visibility="gone"
            android:contentDescription="@string/hide" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pin"
        android:textSize="20sp"
        android:id="@+id/confirm_pin"
        android:inputType="numberPassword"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_margin="12dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:id="@+id/confirm_button"
        android:layout_height="64dp"
        android:text="@string/Confirm"
        android:textSize="20sp"
        android:layout_margin="12dp"
        />
    </LinearLayout>

</RelativeLayout>