<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/white"
    android:background="@drawable/rounded_corner"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_title_text_view"
        android:text="@string/Note_Title"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginVertical="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_content_text_view"
        android:text="@string/Note_Content"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginVertical="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_time_text_view"
        android:text="@string/time"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_marginVertical="4dp"
        />

</LinearLayout>