<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="16dp"
    tools:context=".NoteInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/title_bar_layout">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save_note"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_check_circle_outline_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white"
            />
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/delete_note"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/save_note"
            android:src="@drawable/baseline_delete_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white"
            android:visibility="gone"
            />

        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner" >

        <EditText
            android:id="@+id/note_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/note_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Content"
            android:textSize="20sp"
            android:minLines="15"
            android:gravity="top"
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/black"
            />

    </LinearLayout>

</RelativeLayout>